--- a/apppropertes.properties
+++ b/apppropertes.properties
@@ -1,3 +1,3 @@
 #Filepath
-#Fri Feb 15 22:03:18 UZT 2019
-filepath=C\:\\Users\\User\\AppData\\Roaming\\Microsoft\\Windows\\Network Shortcuts\\yangi.mdf
+#Tue Mar 19 13:03:34 UZT 2019
+filepath=D\:\\NetBeans Projects\\Arxiv\\Oquvmarkaz\\OquvMarkaz-4----26-02-19- bloktest oyna qo'shilgan\\defaultdata.mdf
