--- a/apppropertes.properties
+++ b/apppropertes.properties
@@ -1,3 +1,3 @@
 #Filepath
-#Tue Mar 19 13:03:34 UZT 2019
-filepath=D\:\\NetBeans Projects\\Arxiv\\Oquvmarkaz\\OquvMarkaz-4----26-02-19- bloktest oyna qo'shilgan\\defaultdata.mdf
+#Tue Feb 26 00:24:52 UZT 2019
+#filepath=C\:\\Users\\User\\Documents\\NetBeansProjects\\OquvMarkaz\\OquvMarkaz - model\\src\\Files\\defaultdata.mdf
